--- a/valohai.yaml
+++ b/valohai.yaml
@@ -23,7 +23,7 @@
       - tar xvf $VH_INPUTS_DIR/thumbs/thumbs-0915.tar
       - ls -lah $VH_INPUTS_DIR/thumbs/
       - mkdir -p data/backup
-      - /darknet/darknet detector train data/obj.data cfg/thumbs.cfg $VH_INPUTS_DIR/weights/yolo.weights
+      - /darknet/darknet detector train data/obj.data cfg/thumbs-iso.cfg $VH_INPUTS_DIR/weights/yolo.weights
       - cp -av data/backup $VH_OUTPUTS_DIR
     inputs:
       - name: thumbs
