try to save weights

--- a/cfg/thumbs-iso.cfg
+++ b/cfg/thumbs-iso.cfg
@@ -19,10 +19,10 @@ hue=.1
 
 learning_rate=0.001
 burn_in=1000
-max_batches = 500200
+max_batches = 40000
 policy=steps
-steps=400000,450000
-scales=.1,.1
+steps=200,400,600,20000,30000
+scales=2.5,2,2,.1,.1
 
 [convolutional]
 batch_normalize=1
