--- a/valohai.yaml
+++ b/valohai.yaml
@@ -21,11 +21,11 @@
     image: valohai/darknet:b61bcf5-cuda8.0-cudnn5-devel-ubuntu16.04
     command: 
       - tar xvf $VH_INPUTS_DIR/thumbs/thumbs-0915.tar
-      - ls -lah $VH_INPUTS_DIR/thumbs/
       - md5sum $VH_INPUTS_DIR/weights/yolo.weights
-      - mkdir -p backup
+      - ln -s $VH_OUTPUTS_DIR/backup backup
+      - ls -lah $VH_INPUTS_DIR/thumbs/
+      - ls -lah
       - /darknet/darknet detector train data/obj.data cfg/thumbs-iso.cfg $VH_INPUTS_DIR/weights/yolo.weights
-      - cp -av data/backup $VH_OUTPUTS_DIR
     inputs:
       - name: thumbs
         default: http://k.moonq.org/pub/thumbs-0915.tar
@@ -38,9 +38,8 @@
     command: 
       - tar xvf $VH_INPUTS_DIR/thumbs/thumbs-0915.tar
       - ls -lah $VH_INPUTS_DIR/thumbs/
-      - mkdir -p backup
+      - ln -s $VH_OUTPUTS_DIR/backup backup
       - /darknet/darknet detector train data/obj.data cfg/thumbs.cfg $VH_INPUTS_DIR/weights/tiny-yolo.weights
-      - cp -av data/backup $VH_OUTPUTS_DIR
     inputs:
       - name: thumbs
         default: http://k.moonq.org/pub/thumbs-0915.tar
