--- a/valohai.yaml
+++ b/valohai.yaml
@@ -4,13 +4,14 @@
     name: Train big
     image: valohai/darknet:b61bcf5-cuda8.0-cudnn5-devel-ubuntu16.04
     command: 
+      - set -x
       - tar xvf $VH_INPUTS_DIR/thumbs/thumbs-0915.tar
       - md5sum $VH_INPUTS_DIR/weights/yolo.weights
       - mkdir  $VH_OUTPUTS_DIR/backup 
       - ln -s $VH_OUTPUTS_DIR/backup backup
       - ls -lah $VH_INPUTS_DIR/thumbs/
       - ls -lah
-      - /darknet/darknet detector train data/obj.data cfg/thumbs-iso.cfg $VH_INPUTS_DIR/weights/yolo.weights
+      - /darknet/darknet detector train data/obj.data cfg/thumbs-iso.cfg $VH_INPUTS_DIR/weights/yolo.weights 
     inputs:
       - name: thumbs
         default: http://k.moonq.org/pub/thumbs-0915.tar
