--- a/valohai.yaml
+++ b/valohai.yaml
@@ -6,17 +6,16 @@
     command: 
       - set -x
       - tar xvf $VH_INPUTS_DIR/thumbs/thumbs-0915.tar
-      - md5sum $VH_INPUTS_DIR/weights/yolo.weights
       - mkdir  $VH_OUTPUTS_DIR/backup 
       - ln -s $VH_OUTPUTS_DIR/backup backup
       - ls -lah $VH_INPUTS_DIR/thumbs/
       - ls -lah
-      - /darknet/darknet detector train data/obj.data cfg/thumbs-iso.cfg $VH_INPUTS_DIR/weights/yolo.weights 
+      - /darknet/darknet detector train data/obj.data cfg/thumbs-iso.cfg $VH_INPUTS_DIR/weights/darknet19_448.conv.23
     inputs:
       - name: thumbs
         default: http://k.moonq.org/pub/thumbs-0915.tar
       - name: weights
-        default: http://k.moonq.org/pub/yolo.weights
+        default: http://k.moonq.org/pub/darknet19_448.conv.23
 
 - step:
     name: Train small
