--- a/valohai.yaml
+++ b/valohai.yaml
@@ -27,12 +27,12 @@
       - ln -s $VH_OUTPUTS_DIR/backup backup
       - ls -lah $VH_INPUTS_DIR/thumbs/
       - ls -lah
-      - /darknet/darknet detector train data/obj.data cfg/thumbs-iso.cfg $VH_INPUTS_DIR/weights/thumbs-iso_13000.weights
+      - /darknet/darknet detector train data/obj.data cfg/thumbs-iso-hires.cfg $VH_INPUTS_DIR/weights/brainz.19000.weights
     inputs:
       - name: thumbs
         default: http://k.moonq.org/pub/thumbs-0919.tar
       - name: weights
-        default: http://k.moonq.org/pub/thumbs-iso_13000.weights
+        default: http://k.moonq.org/pub/brainz.19000.weights
 
 
 - step:
